# ai_agents

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.dev  Dockerfile.ecs  Dockerfile.lambda  Dockerfile.worker  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  infra.yml
alembic/: env.py
alembic/versions/: 39346187e0ae_add_rag_ingest_jobs_table.py  481427cd9d63_init_rag_tables.py  6373727cb3f8_enable_pgvector_extension.py
docs/: architecture.md
infra/envs/dev/: .terraform.lock.hcl  backend.tf  dev.tfvars  dev_main.tf  main.tf  outputs.tf  variables.tf
infra/envs/prod/: backend.tf
infra/modules/api_gateway/: api_gateway_main.tf  variables.tf
infra/modules/db/: main.tf  outputs.tf  variables.tf
infra/modules/dynamodb/: dynamodb_main.tf  outputs.tf
infra/modules/ecr/: ecr_main.tf  outputs.tf
infra/modules/ecs/: ecs_main.tf  main.tf  outputs.tf  variables.tf
infra/modules/iam/: iam_main.tf  main.tf  oidc.tf  outputs.tf  variables.tf
infra/modules/lambda/: lambda_main.tf  main.tf  outputs.tf  variables.tf
infra/modules/network/: main.tf  network_main.tf  outputs.tf  variables.tf
infra/modules/s3/: main.tf  outputs.tf
infra/modules/secrets/: main.tf  outputs.tf  secrets_main.tf  variables.tf
infra/modules/sqs/: outputs.tf  sqs_main.tf
scripts/: bootstrap.sh
src/ai_agents/agents/coding/: graph.py  llm.py  main.py  memory.py  nodes.py  prompts.py  registry.py  routing.py  runtime.py  sandbox.py  schemas.py  settings.py  state.py
src/ai_agents/agents/coding/example/: simple.py  test.py
src/ai_agents/agents/coding/skills/: debug.md  frontend_component.md  frontend_styling.md  gmail_access.md  implement_change.md  repo.md  tests.md  web_search.md
src/ai_agents/agents/coding/tests/: discovery.py  profiles.py  results.py  runner.py  test_module.py  test_validation.py
src/ai_agents/agents/coding/tools/: filesystem.py  frontend_component_tools.py  frontend_styling_tools.py  gmail.py  patch.py  search.py  shell.py  web_search.py  web_search_tool.py
src/ai_agents/agents/coding/utils/: constants.py  patch.py  search.py  skills.py  text.py  validation.py
src/ai_agents/agents/frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
src/ai_agents/agents/frontend/electron/: main.ts
src/ai_agents/agents/research/: graph.py  llm.py  nodes.py  prompts.py  routing.py  schemas.py  settings.py  state.py
src/ai_agents/agents/voice/: graph.py  nodes.py  prompts.py  schemas.py  service.py  state.py
src/ai_agents/api/: auth.py  dependency.py  lambda_handler.py  main.py  schemas.py
src/ai_agents/api/routers/: coding_agent.py  health.py  rag.py  voice_agent.py
src/ai_agents/cli/: main.py  pdf_to_md.py  rag_ingest.py  rag_query.py  test.py
src/ai_agents/config/: constants.py  langsmith_bootstrap.py  secrets.py  settings.py
src/ai_agents/core/: retry.py
src/ai_agents/db/: models.py  session.py
src/ai_agents/jobs/: celery.py  tasks.py
src/ai_agents/rag/: chain.py  dynamodb.py  embeddings.py  graph.py  ingest.py  loaders.py  preprocess.py  prompts.py  query.py  repo.py  retrieval.py  settings.py  singletons.py  splitter.py  vectorstore.py
src/ai_agents/rag/query_translations/: cross_encoder.py  plan.py  query_expansion.py  rag_fusion.py  re_rank.py
src/ai_agents/scripts/: warm_models_2.py
src/ai_agents/tools/definitions/: pdf_to_markdown.py
(+42 files in other folders)
