[project]
name = "ai-agents"
version = "0.1.0"
description = "Agentic AI platform personal project"
readme = "README.md"
requires-python = ">=3.10,<3.14"

dependencies = [
    "alembic>=1.17.2",
    "boto3>=1.42.44",
    "fastapi>=0.128.2",
    "fastembed>=0.7.4",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-qdrant>=1.1.0",
    "mangum>=0.21.0",
    "openai>=2.16.0",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.16.2",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]


[project.optional-dependencies]
worker = [
    "celery[sqs]>=5.6.2",
    "kombu>=5.6.2",
    "ocrmypdf>=16.0",
    "pytesseract>=0.3.10",
    "pymupdf4llm>=0.2.7",
    "pillow>=11.0.0,<12.0.0",
    "ghostscript>=0.8.1",
]

chroma = [
    "chromadb>=1.3.7",
    "langchain-chroma>=1.1.0",
]


[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]



[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
